Some refactoring of pdf builder - externalised all of the hardcoded configuration.

--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -14,7 +14,7 @@ context.environment=prod
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
 email.sender=org.springframework.mail.javamail.JavaMailSenderImpl
-email.broken.link.message=If the links in this message do not work in your email client copy and paste them into your browser address bar.
+email.broken.link.message=If you are unable to follow the links in this message, copy and paste them directly into your browser.
 
 email.server=smtp.cs.ucl.ac.uk
 email.port=25
@@ -66,7 +66,11 @@ xml.export.exporter=com.zuehlke.pgadmissions.services.ApplicationExportService
 xml.export.system.reference=Having considered the whole application, including both written and spoken feedback from referees, we are happy to make an appointment based upon the information available to us.
 xml.export.system.qualification=We consider that the applicant has experience equivalent to the typical academic entrance requirements for our program. It is therefore our recommendation that an appointment be made.
 
+xml.export.provided=Provided
 xml.export.not.provided=Not provided
+xml.export.not.required=Not required
+xml.export.date.format=dd MMM yyyy
+xml.export.logo.file.location=/prism_logo.png
 xml.export.ip.not.provided=127.0.0.1
 xml.export.telephone.not.provided=+44 (0) 0000 000 000
 xml.export.other.provided=OTHER
