--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -17,7 +17,7 @@ context.environment=dev
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
 email.sender=com.zuehlke.pgadmissions.mail.MailMockSender
-email.broken.link.message=If you are unable to follow the links in this message, copy and paste them into your browser address bar.
+email.broken.link.message=If you are unable to follow the links in this message, copy and paste them directly into your browser.
 
 email.server=localhost
 email.port=25
@@ -49,7 +49,7 @@ startup.hibernate.search.initialize=false
 # -----------------------------------------------------------------------------
 # MAINTENANCE
 # -----------------------------------------------------------------------------
-maintenance.run=false
+maintenance.run=true
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
@@ -70,7 +70,11 @@ xml.export.exporter=com.zuehlke.pgadmissions.services.ApplicationExportServiceDe
 xml.export.system.reference=Having considered the whole application, including both written and spoken feedback from referees, we are happy to make an appointment based upon the information available to us.
 xml.export.system.qualification=We consider that the applicant has experience equivalent to the typical academic entrance requirements for our program. It is therefore our recommendation that an appointment be made.
 
+xml.export.provided=Provided
 xml.export.not.provided=Not provided
+xml.export.not.required=Not required
+xml.export.date.format=dd MMM yyyy
+xml.export.logo.file.location=/prism_logo.png
 xml.export.ip.not.provided=127.0.0.1
 xml.export.telephone.not.provided=+44 (0) 0000 000 000
 xml.export.other.provided=OTHER
