Finished refactoring the PDF builder and embedding content security. Null safe methods for get application data and transforming to localized formats.

--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -71,6 +71,7 @@ xml.export.not.provided=Not provided
 xml.export.not.required=Not required
 xml.export.date.format=dd MMM yyyy
 xml.export.logo.file.location=/prism_logo.png
+xml.export.logo.file.width.percentage=35f
 xml.export.ip.not.provided=127.0.0.1
 xml.export.telephone.not.provided=+44 (0) 0000 000 000
 xml.export.other.provided=OTHER
