--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -67,9 +67,8 @@ xml.export.exporter=com.zuehlke.pgadmissions.services.ApplicationExportServiceDe
 xml.export.system.reference=Having considered the whole application, including both written and spoken feedback from referees, we are happy to make an appointment based upon the information available to us.
 xml.export.system.qualification=We consider that the applicant has experience equivalent to the typical academic entrance requirements for our program. It is therefore our recommendation that an appointment be made.
 
-vxml.export.provided=Provided
+xml.export.provided=Provided
 xml.export.not.provided=Not provided
-xml.export.not.required=Not required
 xml.export.date.format=dd MMM yyyy
 xml.export.logo.file.location=/prism_logo.png
 xml.export.logo.file.width.percentage=35f
