Debugged all of the problems in the batch tasks.

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -43,8 +43,8 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 startup.workflow.initialize=true
 startup.workflow.initialize.notifications=true
-startup.import.system.data=false
-startup.hibernate.search.initialize=false
+startup.import.system.data=true
+startup.hibernate.search.initialize=true
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
@@ -113,7 +113,7 @@ json.pretty.print=true
 # INTEGRATIONS
 # -----------------------------------------------------------------------------
 integration.google.api.key=AIzaSyBs0D7C2wzrK3vL1tl5nZ8Vm3PvnvdrkYM
-integration.google.geocoding.code.import.data=false
+integration.google.geocoding.code.import.data=true
 integration.google.geocoding.api.uri=https://maps.googleapis.com/maps/api/geocode/
 integration.google.geocoding.api.day.batch.limit=250
 integration.google.geocoding.api.request.delay.ms=100
