All of the foundation entities and code for configuration and localisation at server level.

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -100,6 +100,7 @@ system.name=PRiSM
 system.user.firstName=UCL
 system.user.lastName=PRiSM
 system.user.email=prism@ucl.ac.uk
+system.locale="EN_GB"
 
 system.default.email.subject.directory=email/subject/
 system.default.email.content.directory=email/content/
