--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -42,7 +42,7 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # START-UP
 # -----------------------------------------------------------------------------
 startup.workflow.initialize=false
-startup.workflow.initialize.notifications=false
+startup.workflow.initialize.notifications=true
 startup.import.system.data=false
 startup.hibernate.search.initialize=false
 
