--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -41,8 +41,8 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=false
-startup.workflow.initialize.notifications=false
+startup.workflow.initialize=true
+startup.workflow.initialize.notifications=true
 startup.import.system.data=false
 startup.hibernate.search.initialize=false
 
@@ -100,7 +100,6 @@ system.name=PRiSM
 system.user.firstName=UCL
 system.user.lastName=PRiSM
 system.user.email=prism@ucl.ac.uk
-system.locale="EN_GB"
 
 system.default.email.subject.directory=email/subject/
 system.default.email.content.directory=email/content/
