Completed the customization/localization infrastructure ... all display values on the server now externalized.

--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -1,3 +1,6 @@
+# =============================================================================
+# UCL Postgraduate Admissions (Local/Dev)
+# =============================================================================
 application.host=http://prism-uat.alumeni.co.uk
 
 # -----------------------------------------------------------------------------
@@ -14,7 +17,6 @@ context.environment=uat
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
 email.sender=org.springframework.mail.javamail.JavaMailSenderImpl
-email.broken.link.message=If you are unable to follow the links in this message, copy and paste them directly into your browser.
 
 email.server=localhost
 email.port=25
@@ -64,18 +66,8 @@ custom.forms.xsd.location=xsd/scoring/configuration.xsd
 # -----------------------------------------------------------------------------
 xml.export.exporter=com.zuehlke.pgadmissions.services.ApplicationExportServiceDevelopment
 
-xml.export.system.reference=Having considered the whole application, including both written and spoken feedback from referees, we are happy to make an appointment based upon the information available to us.
-xml.export.system.qualification=We consider that the applicant has experience equivalent to the typical academic entrance requirements for our program. It is therefore our recommendation that an appointment be made.
-
-xml.export.provided=Provided
-xml.export.not.provided=Not provided
-xml.export.date.format=dd MMM yyyy
 xml.export.logo.file.location=/prism_logo.png
 xml.export.logo.file.width.percentage=35f
-xml.export.ip.not.provided=127.0.0.1
-xml.export.telephone.not.provided=+44 (0) 0000 000 000
-xml.export.other.provided=OTHER
-xml.export.refer.to.document=Refer to attached document.
 xml.export.source=PRISM
 
 xml.data.export.webservice.url=http://localhost:8088/mockService
