--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -86,6 +86,7 @@ xml.data.export.sftp.folder=
 # SYSTEM STARTUP SETTINGS
 # -----------------------------------------------------------------------------
 system.name=PRiSM
+system.helpdesk=http://alumenilimited.freshdesk.com/
 system.user.firstName=UCL
 system.user.lastName=PRiSM
 system.user.email=prism@ucl.ac.uk
