--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -40,8 +40,8 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=true
-startup.workflow.initialize.notifications=false
+startup.workflow.initialize=false
+startup.workflow.initialize.notifications=true
 startup.import.system.data=false
 startup.hibernate.search.initialize=false
 
