Fixed some notification problems and domain objects cleaned-up

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -48,7 +48,7 @@ startup.hibernate.search.initialize=false
 # -----------------------------------------------------------------------------
 # MAINTENANCE
 # -----------------------------------------------------------------------------
-maintenance.run=true
+maintenance.run=false
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
