Fixed error in web service builder and problem with notification template properties.

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -48,7 +48,7 @@ startup.hibernate.search.initialize=false
 # -----------------------------------------------------------------------------
 # MAINTENANCE
 # -----------------------------------------------------------------------------
-maintenance.run=false
+maintenance.run=true
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
