Most of email refactoring.

--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -16,6 +16,9 @@ context.environment=prod
 # -----------------------------------------------------------------------------
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
+email.location=email/email_template.ftl
+email.control.template=email/email_control_template.ftl
+
 email.sender=org.springframework.mail.javamail.JavaMailSenderImpl
 
 email.server=smtp.cs.ucl.ac.uk
