--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -16,6 +16,9 @@ context.environment=dev
 # -----------------------------------------------------------------------------
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
+email.location=email/email_template.ftl
+email.control.template=email/email_control_template.ftl
+
 email.sender=com.zuehlke.pgadmissions.mail.MailMockSender
 
 email.server=localhost
