--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -19,6 +19,9 @@ context.environment=test
 # -----------------------------------------------------------------------------
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
+email.location=email/email_template.ftl
+email.control.template=email/email_control_template.ftl
+
 email.sender=com.zuehlke.pgadmissions.mail.MailMockSender
 
 email.address.from=pgadmissions.jenkins@zuhlke.com
