--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -43,7 +43,7 @@ hibernate.search.default.indexBase=/opt/bitnami/jboss/hibernate-indexes-uat
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=false
+startup.workflow.initialize=true
 startup.workflow.initialize.notifications=true
 startup.import.system.data=false
 startup.hibernate.search.initialize=true
