--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -43,15 +43,15 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=true
-startup.workflow.initialize.notifications=true
+startup.workflow.initialize=false
+startup.workflow.initialize.notifications=false
 startup.import.system.data=false
 startup.hibernate.search.initialize=false
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
 # -----------------------------------------------------------------------------
-maintenance.run=true
+maintenance.run=false
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
