Change the model for theme - single column in application with pipe separated list.

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -51,7 +51,7 @@ startup.hibernate.search.initialize=false
 # -----------------------------------------------------------------------------
 # MAINTENANCE
 # -----------------------------------------------------------------------------
-maintenance.run=true
+maintenance.run=false
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
