--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -45,8 +45,8 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 startup.workflow.initialize=true
 startup.workflow.initialize.notifications=true
-startup.import.system.data=false
-startup.hibernate.search.initialize=false
+startup.import.system.data=true
+startup.hibernate.search.initialize=true
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
