Bugs fixed during the DotMailer demo last night.

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -51,7 +51,7 @@ startup.hibernate.search.initialize=true
 # -----------------------------------------------------------------------------
 # MAINTENANCE
 # -----------------------------------------------------------------------------
-maintenance.run=false
+maintenance.run=true
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
