Added support for creating new projects

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -43,10 +43,10 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=true
+startup.workflow.initialize=false
 startup.workflow.initialize.notifications=true
 startup.import.system.data=true
-startup.hibernate.search.initialize=true
+startup.hibernate.search.initialize=false
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
