--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -43,7 +43,7 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=true
+startup.workflow.initialize=false
 startup.workflow.initialize.notifications=true
 startup.import.system.data=true
 startup.hibernate.search.initialize=true
