Fixed system id problem.

--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -83,6 +83,7 @@ xml.data.export.sftp.folder=
 # -----------------------------------------------------------------------------
 # SYSTEM STARTUP SETTINGS
 # -----------------------------------------------------------------------------
+system.id=1
 system.name=PRiSM
 system.helpdesk=http://alumenilimited.freshdesk.com/
 system.user.firstName=UCL
