--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -86,6 +86,7 @@ xml.data.export.sftp.folder=/u02/live/docs/prism
 # -----------------------------------------------------------------------------
 # SYSTEM STARTUP SETTINGS
 # -----------------------------------------------------------------------------
+system.id=1
 system.name=PRiSM
 system.helpdesk=http://alumenilimited.freshdesk.com/
 system.user.firstName=UCL
