--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -45,7 +45,7 @@ hibernate.search.default.indexBase=/opt/bitnami/jboss/hibernate-indexes-uat
 # -----------------------------------------------------------------------------
 startup.workflow.initialize=true
 startup.workflow.initialize.notifications=true
-startup.import.system.data=false
+startup.import.system.data=true
 startup.hibernate.search.initialize=true
 
 # -----------------------------------------------------------------------------
