--- a/pom.xml
+++ b/pom.xml
@@ -301,6 +301,12 @@
 			<artifactId>org.apache.oltu.oauth2.client</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+        <dependency>
+            <groupId>org.imgscalr</groupId>
+            <artifactId>imgscalr-lib</artifactId>
+            <version>4.2</version>
+        </dependency>
+
 
         <!-- Logging -->
         <dependency>
