Fixed some bugs in the initialization sequence.

--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -72,7 +72,7 @@ xml.export.logo.file.width.percentage=35f
 xml.export.source=PRISM
 
 xml.data.export.webservice.url=https://swiss.adcom.ucl.ac.uk:4443/registryws/
-xml.data.export.webservice.keystore=classpath:/keystodre/pgadmissions.jks
+xml.data.export.webservice.keystore=classpath:/keystore/pgadmissions.jks
 xml.data.export.webservice.keystorePassword=pgadmissions
 
 xml.data.export.sftp.host=sits-g.adcom.ucl.ac.uk
