--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -43,8 +43,8 @@ hibernate.search.default.indexBase=/opt/bitnami/jboss/hibernate-indexes-uat
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=true
-startup.import.system.data=true
+startup.workflow.initialize=false
+startup.import.system.data=false
 startup.hibernate.search.initialize=true
 
 # -----------------------------------------------------------------------------
