--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -69,7 +69,7 @@ custom.forms.xsd.location=xsd/scoring/configuration.xsd
 xml.export.exporter=com.zuehlke.pgadmissions.services.ApplicationExportServiceDevelopment
 
 xml.export.logo.file.location=/prism_logo.png
-xml.export.logo.file.width.percentage=35f
+xml.export.logo.file.width.percentage=.50f
 xml.export.source=PRISM
 
 xml.data.export.webservice.url=http://localhost:8088/mockService
