Added email logo

--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -1,7 +1,8 @@
 # =============================================================================
 # UCL Postgraduate Admissions (Local/Dev)
 # =============================================================================
-application.host=http://prism-uat.alumeni.co.uk
+application.url=http://prism-uat.alumeni.co.uk
+application.api.url=http://prism-uat.alumeni.co.uk/pgadmissions/api
 
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
