--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -1,7 +1,8 @@
 # =============================================================================
 # UCL Postgraduate Admissions (Production)
 # =============================================================================
-application.host=http://prism.ucl.ac.uk
+application.url=http://prism.ucl.ac.uk
+application.api.url=http://prism.ucl.ac.uk/pgadmissions/api
 
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
