--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -1,7 +1,8 @@
 # =============================================================================
 # UCL Postgraduate Admissions (Local/Dev)
 # =============================================================================
-application.host=http://localhost:9000
+application.url=http://localhost:9000
+application.api.url=http://localhost:8080/pgadmissions/api
 
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
@@ -43,7 +44,7 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=false
+startup.workflow.initialize=true
 startup.import.system.data=false
 startup.hibernate.search.initialize=false
 
