--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -1,7 +1,7 @@
 # =============================================================================
 # UCL Postgraduate Admissions (Local/Dev)
 # =============================================================================
-application.host=http://localhost:8080
+application.url=http://localhost:8080
 
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
