--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -2,6 +2,7 @@
 # UCL Postgraduate Admissions (Local/Dev)
 # =============================================================================
 application.url=http://localhost:8080
+application.api.url=http://localhost:8080/pgadmissions/api
 
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
