Fixed some logo url problems

--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -2,7 +2,7 @@
 # UCL Postgraduate Admissions (Local/Dev)
 # =============================================================================
 application.url=http://prism-dev.alumeni.co.uk
-application.api.url=http://prism-dev.alumeni.co.uk/pgadmissions/api
+application.api.url=http://prism-dev.alumeni.co.uk/pgadmissions-sit/api
 
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
