--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -41,7 +41,7 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=false
+startup.workflow.initialize=true
 startup.import.system.data=false
 startup.hibernate.search.initialize=false
 
