--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -1,7 +1,8 @@
 # =============================================================================
 # UCL Postgraduate Admissions (Local/Dev)
 # =============================================================================
-application.host=http://prism-dev.alumeni.co.uk
+application.url=http://prism-dev.alumeni.co.uk
+application.api.url=http://prism-dev.alumeni.co.uk/pgadmissions-sit/api
 
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
