--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -44,9 +44,9 @@ hibernate.search.default.indexBase=/opt/bitnami/jboss/hibernate-indexes-uat
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=true
+startup.workflow.initialize=false
 startup.import.system.data=false
-startup.hibernate.search.initialize=true
+startup.hibernate.search.initialize=false
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
