--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -2,7 +2,7 @@
 # UCL Postgraduate Admissions (Local/Dev)
 # =============================================================================
 application.url=http://prism-uat.alumeni.co.uk
-application.api.url=http://prism-uat.alumeni.co.uk/pgadmissions-uat/api
+application.api.url=http://prism-uat.alumeni.co.uk/prism-uat/api
 
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
