--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -2,7 +2,7 @@
 # UCL Postgraduate Admissions (Production)
 # =============================================================================
 application.url=http://prism.ucl.ac.uk
-application.api.url=http://prism.ucl.ac.uk/pgadmissions/api
+application.api.url=http://prism.ucl.ac.uk/prism/api
 
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
