--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -2,7 +2,7 @@
 # UCL Postgraduate Admissions (Local/Dev)
 # =============================================================================
 application.url=http://localhost:9000
-application.api.url=http://localhost:8080/pgadmissions/api
+application.api.url=http://localhost:8080/prism/api
 
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
