Changed target war file name to prism

--- a/pom.xml
+++ b/pom.xml
@@ -388,7 +388,7 @@
             </extension>
         </extensions>
 
-        <finalName>pgadmissions</finalName>
+        <finalName>prism</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
