Turned off full text search

--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -45,7 +45,7 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 startup.workflow.initialize=true
 startup.import.system.data=true
-startup.hibernate.search.initialize=true
+startup.hibernate.search.initialize=false
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
