--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -43,14 +43,14 @@ hibernate.search.default.indexBase=/opt/bitnami/jboss/hibernate-indexes-sit
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=true
+startup.workflow.initialize=false
 startup.import.system.data=false
-startup.hibernate.search.initialize=true
+startup.hibernate.search.initialize=false
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
 # -----------------------------------------------------------------------------
-maintenance.run=true
+maintenance.run=false
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
