--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -43,8 +43,8 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=true
-startup.import.system.data=true
+startup.workflow.initialize=false
+startup.import.system.data=false
 startup.hibernate.search.initialize=false
 
 # -----------------------------------------------------------------------------
