Further fixes to workflow and configuration.

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -50,7 +50,7 @@ startup.hibernate.search.initialize=false
 # -----------------------------------------------------------------------------
 # MAINTENANCE
 # -----------------------------------------------------------------------------
-maintenance.run=false
+maintenance.run=true
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
