--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -1,8 +1,8 @@
 # =============================================================================
 # UCL Postgraduate Admissions (Production)
 # =============================================================================
-application.url=http://prism.ucl.ac.uk
-application.api.url=http://prism.ucl.ac.uk/prism/api
+application.url=https://prism.ucl.ac.uk
+application.api.url=https://prism.ucl.ac.uk/prism/api
 
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
