Fixed initialisation problem that broke UAT system workflow.

--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -34,7 +34,7 @@ mail.smtp.timeout=2000
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=false
+startup.workflow.initialize=true
 startup.import.system.data=true
 
 # -----------------------------------------------------------------------------
