Further clean up to environment properties and removal of some old code.

--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -34,8 +34,8 @@ mail.smtp.timeout=2000
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=true
-startup.import.system.data=true
+startup.workflow.initialize=false
+startup.import.system.data=false
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
@@ -47,11 +47,6 @@ maintenance.run=true
 # -----------------------------------------------------------------------------
 import.institutionDomicile.location=xml/iso/isoCountryCode.xml
 import.countryCurrency.location=xml/iso/countryCurrency.csv
-
-# -----------------------------------------------------------------------------
-# CUSTOM FORMS
-# -----------------------------------------------------------------------------
-custom.forms.xsd.location=xsd/scoring/configuration.xsd
 
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
