--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -35,7 +35,7 @@ mail.smtp.timeout=20000
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=false
+startup.workflow.initialize=true
 startup.import.system.data=false
 
 # -----------------------------------------------------------------------------
