--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -34,7 +34,7 @@ mail.smtp.timeout=2000
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=true
+startup.workflow.initialize=false
 startup.import.system.data=false
 
 # -----------------------------------------------------------------------------
