--- a/pom.xml
+++ b/pom.xml
@@ -366,7 +366,11 @@
 		  <artifactId>scribe</artifactId>
 		  <version>1.3.6</version>
 		</dependency>
-
+		<dependency>
+			<groupId>net.sourceforge.htmlunit</groupId>
+			<artifactId>htmlunit</artifactId>
+			<version>2.13</version>
+		</dependency>
 
     </dependencies>
 
