--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -96,3 +96,5 @@ integration.yahoo.exchange.rate.api.schema=store://datatables.org/alltableswithk
 integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
 
 integration.linked.in.people.search.uri=https://www.linkedin.com/pub/dir/
+
+integration.amazon.bucket="prismdocument"
