Fixed the build.

--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -96,3 +96,6 @@ integration.yahoo.exchange.rate.api.schema=store://datatables.org/alltableswithk
 integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
 
 integration.linked.in.people.search.uri=https://www.linkedin.com/pub/dir/
+
+integration.amazon.on=false
+integration.amazon.bucket=prismdocumentuat
