--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -97,4 +97,5 @@ integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
 
 integration.linked.in.people.search.uri=https://www.linkedin.com/pub/dir/
 
-integration.amazon.bucket="prismdocument"
+integration.amazon.on=false
+integration.amazon.bucket=prismdocumentloc
