Fixing build (again).

--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -98,5 +98,4 @@ integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
 integration.linked.in.people.search.uri=https://www.linkedin.com/pub/dir/
 
 integration.amazon.on=false
-integration.amazon.bucket=prismdocumentcig
-
+integration.amazon.bucket=prism-document-cig
