--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -98,4 +98,4 @@ integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
 integration.linked.in.people.search.uri=https://www.linkedin.com/pub/dir/
 
 integration.amazon.on=false
-integration.amazon.bucket=prismdocumentuat
+integration.amazon.bucket=prism-document-uat
