--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -99,4 +99,4 @@ integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
 integration.linked.in.people.search.uri=https://www.linkedin.com/pub/dir/
 
 integration.amazon.on=false
-integration.amazon.bucket=prismdocument
+integration.amazon.bucket=prism-document
