--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -98,4 +98,4 @@ integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
 integration.linked.in.people.search.uri=https://www.linkedin.com/pub/dir/
 
 integration.amazon.on=false
-integration.amazon.bucket=prismdocumentloc
+integration.amazon.bucket=prism-document-loc
