Fixed sitemap problems and fixed/refactored robots functionality.

--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -34,7 +34,7 @@ mail.smtp.timeout=2000
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=false
+startup.workflow.initialize=true
 startup.import.system.data=false
 
 # -----------------------------------------------------------------------------
@@ -76,6 +76,7 @@ system.helpdesk=http://alumenilimited.freshdesk.com/
 system.user.firstName=UCL
 system.user.lastName=PRiSM
 system.user.email=prism@ucl.ac.uk
+system.social.thumbnail=fbimg.jpg
 
 system.default.email.subject.directory=email/subject/
 system.default.email.content.directory=email/content/
