--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -77,6 +77,7 @@ system.helpdesk=http://alumenilimited.freshdesk.com/
 system.user.firstName=UCL
 system.user.lastName=PRiSM
 system.user.email=prism@ucl.ac.uk
+system.social.thumbnail=fbimg.jpg
 
 system.default.email.subject.directory=email/subject/
 system.default.email.content.directory=email/content/
