Fix averages ready for deploy.

--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -99,5 +99,5 @@ integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
 
 integration.linked.in.people.search.uri=https://www.linkedin.com/pub/dir/
 
-integration.amazon.on=false
+integration.amazon.on=true
 integration.amazon.bucket=prism-document
