Fixed a few small problems with the documents and references.

--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -101,3 +101,4 @@ integration.linked.in.people.search.uri=https://www.linkedin.com/pub/dir/
 
 integration.amazon.on=true
 integration.amazon.bucket=prism-document
+integration.amazon.production.bucket=prism-document
