--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -100,3 +100,4 @@ integration.linked.in.people.search.uri=https://www.linkedin.com/pub/dir/
 
 integration.amazon.on=false
 integration.amazon.bucket=prism-document-loc
+integration.amazon.production.bucket=prism-document
