--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -100,3 +100,4 @@ integration.linked.in.people.search.uri=https://www.linkedin.com/pub/dir/
 
 integration.amazon.on=false
 integration.amazon.bucket=prism-document-uat
+integration.amazon.production.bucket=prism-document
