--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -98,3 +98,4 @@ integration.linked.in.people.search.uri=https://www.linkedin.com/pub/dir/
 
 integration.amazon.on=false
 integration.amazon.bucket=prism-document-tst
+integration.amazon.production.bucket=prism-document
