Small changes to rejection reasons requested by LAHP.

--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -34,7 +34,7 @@ mail.smtp.timeout=2000
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=true
+startup.workflow.initialize=false
 startup.import.system.data=false
 
 # -----------------------------------------------------------------------------
@@ -95,8 +95,6 @@ integration.google.search.api.cse.key=014399221313847880480:klv9napshqc&q
 integration.yahoo.exchange.rate.api.uri=https://query.yahooapis.com/v1/public/yql
 integration.yahoo.exchange.rate.api.schema=store://datatables.org/alltableswithkeys
 integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
-
-integration.linked.in.people.search.uri=https://www.linkedin.com/pub/dir/
 
 integration.amazon.on=false
 integration.amazon.bucket=prism-document-uat
