--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -35,7 +35,7 @@ mail.smtp.timeout=20000
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=true
+startup.workflow.initialize=false
 startup.import.system.data=false
 
 # -----------------------------------------------------------------------------
@@ -95,8 +95,6 @@ integration.google.search.api.uri=https://www.googleapis.com/customsearch/v1
 integration.yahoo.exchange.rate.api.uri=https://query.yahooapis.com/v1/public/yql
 integration.yahoo.exchange.rate.api.schema=store://datatables.org/alltableswithkeys
 integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
-
-integration.linked.in.people.search.uri=https://www.linkedin.com/pub/dir/
 
 integration.amazon.on=false
 integration.amazon.bucket=prism-document-loc
