--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -1,8 +1,8 @@
 # =============================================================================
 # UCL Postgraduate Admissions (Local/Dev)
 # =============================================================================
-application.url=http://localhost:9000
-application.api.url=http://localhost:8080/prism/api
+application.url=http://local.prism.ucl.ac.uk:9000
+application.api.url=http://local.prism.ucl.ac.uk:8080/prism/api
 
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
@@ -99,3 +99,10 @@ integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
 integration.amazon.on=false
 integration.amazon.bucket=prism-document-loc
 integration.amazon.production.bucket=prism-document
+
+auth.facebook.appSecret=b5c7321c5526298a5ba37db405b7d533
+auth.linkedin.appSecret=S9rG2e7FWFRY5YFh
+auth.google.appSecret=-h3fjHup_hE2-Im1FMXDhy_c
+auth.twitter.appSecret=2IjePYI6o865p1mNZbcgxXtFBhXJJolOlvOVyDs4exje9Cc018
+
+auth.twitter.clientId=Y0qcyojCE52boaHdEwZoxDL3k
