External provider keys put into environment files

--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -99,3 +99,10 @@ integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
 integration.amazon.on=false
 integration.amazon.bucket=prism-document-uat
 integration.amazon.production.bucket=prism-document
+
+auth.facebook.appSecret=ee6572ccc58d9631551d4c44c3db08a4
+auth.linkedin.appSecret=qqbWOxibjsuCetzN
+auth.google.appSecret=-h3fjHup_hE2-Im1FMXDhy_c
+auth.twitter.appSecret=n281KespkSB38MDFYe3pCfkmzLbYkJ8nd3X47hC6YhTOHgHPpn
+
+auth.twitter.clientId=j8RbAx2k1NGlrT7G0BJ3osko4
