--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -100,3 +100,10 @@ integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
 integration.amazon.on=true
 integration.amazon.bucket=prism-document
 integration.amazon.production.bucket=prism-document
+
+auth.facebook.appSecret=bd0d115f73ed4a36c68789bed0a7fce0
+auth.linkedin.appSecret=huh0X2AFsN0NUMlR
+auth.google.appSecret=-h3fjHup_hE2-Im1FMXDhy_c
+auth.twitter.appSecret=TjrnVFgGQu4dzcSMnJ6ZAjSTSvsAxxzatjp1a27mzcvvjY7Ift
+
+auth.twitter.clientId=bMGHX5lrVRuMk6WCEjyINBam8
