--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -97,3 +97,10 @@ integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
 integration.amazon.on=false
 integration.amazon.bucket=prism-document-tst
 integration.amazon.production.bucket=prism-document
+
+auth.facebook.appSecret=b5c7321c5526298a5ba37db405b7d533
+auth.linkedin.appSecret=S9rG2e7FWFRY5YFh
+auth.google.appSecret=-h3fjHup_hE2-Im1FMXDhy_c
+auth.twitter.appSecret=2IjePYI6o865p1mNZbcgxXtFBhXJJolOlvOVyDs4exje9Cc018
+
+auth.twitter.clientId=Y0qcyojCE52boaHdEwZoxDL3k
