Message bounce support with AWS implemented

--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -17,19 +17,7 @@ context.environment=prod
 # -----------------------------------------------------------------------------
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
-email.sender=org.springframework.mail.javamail.JavaMailSenderImpl
-
-email.server=smtp.cs.ucl.ac.uk
-email.port=25
-email.username=
-email.password=
-email.address.from=prism@ucl.ac.uk
-
-mail.smtp.auth=true
-mail.smtp.starttls.enable=true
-mail.smtp.quitwait=true
-mail.smtp.connectiontimeout=20000
-mail.smtp.timeout=20000
+email.source=prism@alumeni.co.uk
 
 # -----------------------------------------------------------------------------
 # START-UP
@@ -58,8 +46,6 @@ xml.export.logo.file.width.percentage=35f
 xml.export.source=PRISM
 
 xml.data.export.webservice.url=https://swiss.adcom.ucl.ac.uk:4443/registryws/
-xml.data.export.webservice.keystore=classpath:/keystore/pgadmissions.jks
-xml.data.export.webservice.keystorePassword=pgadmissions
 
 xml.data.export.sftp.host=sits-g.adcom.ucl.ac.uk
 xml.data.export.sftp.port=22
@@ -74,9 +60,9 @@ xml.data.export.sftp.folder=/u02/live/docs/prism
 system.id=1
 system.name=PRiSM
 system.helpdesk=http://alumenilimited.freshdesk.com/
-system.user.firstName=UCL
+system.user.firstName=Alumeni
 system.user.lastName=PRiSM
-system.user.email=prism@ucl.ac.uk
+system.user.email=prism@alumeni.co.uk
 system.social.thumbnail=fbimg.jpg
 
 system.default.email.subject.directory=email/subject/
@@ -90,8 +76,6 @@ integration.google.geocoding.code.import.data=true
 integration.google.geocoding.api.uri=https://maps.googleapis.com/maps/api/geocode/
 integration.google.geocoding.api.day.batch.limit=250
 integration.google.geocoding.api.request.delay.ms=100
-integration.google.search.api.uri=https://www.googleapis.com/customsearch/v1
-integration.google.search.api.cse.key=014399221313847880480:klv9napshqc&q
 
 integration.yahoo.exchange.rate.api.uri=https://query.yahooapis.com/v1/public/yql
 integration.yahoo.exchange.rate.api.schema=store://datatables.org/alltableswithkeys
@@ -100,6 +84,7 @@ integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
 integration.amazon.on=true
 integration.amazon.bucket=prism-document
 integration.amazon.production.bucket=prism-document
+integration.amazon.email.bounce.queue=https://sqs.eu-west-1.amazonaws.com/436642438006/prism-mail-bounces
 
 auth.facebook.appSecret=bd0d115f73ed4a36c68789bed0a7fce0
 auth.linkedin.appSecret=huh0X2AFsN0NUMlR
