--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -1,5 +1,5 @@
 # =============================================================================
-# UCL Postgraduate Admissions (Local/Dev)
+# UCL Postgraduate Admissions (UAT)
 # =============================================================================
 application.url=http://prism-uat.alumeni.co.uk
 application.api.url=http://prism-uat.alumeni.co.uk/prism-uat/api
@@ -17,19 +17,7 @@ context.environment=uat
 # -----------------------------------------------------------------------------
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
-email.sender=org.springframework.mail.javamail.JavaMailSenderImpl
-
-email.server=localhost
-email.port=25
-email.username=
-email.password=
-email.address.from=prism@prism-uat.alumeni.co.uk
-
-mail.smtp.auth=false
-mail.smtp.starttls.enable=false
-mail.smtp.quitwait=true
-mail.smtp.connectiontimeout=2000
-mail.smtp.timeout=2000
+email.source=prism-uat@alumeni.co.uk
 
 # -----------------------------------------------------------------------------
 # START-UP
@@ -58,7 +46,6 @@ xml.export.logo.file.width.percentage=35f
 xml.export.source=PRISM
 
 xml.data.export.webservice.url=http://localhost:8088/mockService
-xml.data.export.webservice.keystorePassword=pgadmissions
 
 xml.data.export.sftp.host=192.168.11.115
 xml.data.export.sftp.port=22
@@ -73,9 +60,9 @@ xml.data.export.sftp.folder=
 system.id=1
 system.name=PRiSM
 system.helpdesk=http://alumenilimited.freshdesk.com/
-system.user.firstName=UCL
+system.user.firstName=Alumeni
 system.user.lastName=PRiSM
-system.user.email=prism@ucl.ac.uk
+system.user.email=prism-uat@alumeni.co.uk
 system.social.thumbnail=fbimg.jpg
 
 system.default.email.subject.directory=email/subject/
@@ -89,8 +76,6 @@ integration.google.geocoding.code.import.data=true
 integration.google.geocoding.api.uri=https://maps.googleapis.com/maps/api/geocode/
 integration.google.geocoding.api.day.batch.limit=250
 integration.google.geocoding.api.request.delay.ms=100
-integration.google.search.api.uri=https://www.googleapis.com/customsearch/v1
-integration.google.search.api.cse.key=014399221313847880480:klv9napshqc&q
 
 integration.yahoo.exchange.rate.api.uri=https://query.yahooapis.com/v1/public/yql
 integration.yahoo.exchange.rate.api.schema=store://datatables.org/alltableswithkeys
@@ -99,6 +84,7 @@ integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
 integration.amazon.on=false
 integration.amazon.bucket=prism-document-uat
 integration.amazon.production.bucket=prism-document
+integration.amazon.email.bounce.queue=https://sqs.eu-west-1.amazonaws.com/436642438006/prism-uat-mail-bounces
 
 auth.facebook.appSecret=ee6572ccc58d9631551d4c44c3db08a4
 auth.linkedin.appSecret=qqbWOxibjsuCetzN
