--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -17,20 +17,7 @@ context.environment=dev
 # -----------------------------------------------------------------------------
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
-email.sender=com.zuehlke.pgadmissions.mail.MailMockSender
-
-email.server=localhost
-email.port=25
-email.username=
-email.password=
-email.address.from=pgadmissions.jenkins@zuhlke.com
-
-mail.smtp.auth=true
-mail.smtp.starttls.enable=true
-mail.smtp.quitwait=true
-mail.smtp.connectiontimeout=20000
-mail.smtp.timeout=20000
-
+email.source=prism@alumeni.co.uk
 
 # -----------------------------------------------------------------------------
 # START-UP
@@ -59,7 +46,6 @@ xml.export.logo.file.width.percentage=.50f
 xml.export.source=PRISM
 
 xml.data.export.webservice.url=http://localhost:8088/mockService
-xml.data.export.webservice.keystorePassword=pgadmissions
 
 xml.data.export.sftp.host=192.168.11.115
 xml.data.export.sftp.port=22
@@ -74,9 +60,9 @@ xml.data.export.sftp.folder=
 system.id=1
 system.name=PRiSM
 system.helpdesk=http://alumenilimited.freshdesk.com/
-system.user.firstName=UCL
+system.user.firstName=Alumeni
 system.user.lastName=PRiSM
-system.user.email=prism@ucl.ac.uk
+system.user.email=prism-local@alumeni.co.uk
 system.social.thumbnail=fbimg.jpg
 
 system.default.email.subject.directory=email/subject/
@@ -90,7 +76,6 @@ integration.google.geocoding.code.import.data=true
 integration.google.geocoding.api.uri=https://maps.googleapis.com/maps/api/geocode/
 integration.google.geocoding.api.day.batch.limit=250
 integration.google.geocoding.api.request.delay.ms=100
-integration.google.search.api.uri=https://www.googleapis.com/customsearch/v1
 
 integration.yahoo.exchange.rate.api.uri=https://query.yahooapis.com/v1/public/yql
 integration.yahoo.exchange.rate.api.schema=store://datatables.org/alltableswithkeys
@@ -99,6 +84,8 @@ integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
 integration.amazon.on=false
 integration.amazon.bucket=prism-document-loc
 integration.amazon.production.bucket=prism-document
+integration.amazon.email.bounce.queue=https://sqs.eu-west-1.amazonaws.com/436642438006/prism-mail-bounces
+
 
 auth.facebook.appSecret=b5c7321c5526298a5ba37db405b7d533
 auth.linkedin.appSecret=S9rG2e7FWFRY5YFh
