--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -20,9 +20,7 @@ context.environment=test
 # -----------------------------------------------------------------------------
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
-email.sender=com.zuehlke.pgadmissions.mail.MailMockSender
-
-email.address.from=pgadmissions.jenkins@zuhlke.com
+email.source=prism@alumeni.co.uk
 
 # -----------------------------------------------------------------------------
 # START-UP
@@ -56,7 +54,6 @@ xml.export.logo.file.width.percentage=35f
 xml.export.source=PRISM
 
 xml.data.export.webservice.url=http://localhost:8088/mockService
-xml.data.export.webservice.keystorePassword=pgadmissions
 
 xml.data.export.sftp.host=192.168.11.115
 xml.data.export.sftp.port=22
@@ -71,9 +68,9 @@ xml.data.export.sftp.folder=
 system.id=1
 system.name=PRiSM
 system.helpdesk=http://alumenilimited.freshdesk.com/
-system.user.firstName=UCL
+system.user.firstName=Alumeni
 system.user.lastName=PRiSM
-system.user.email=prism@ucl.ac.uk
+system.user.email=prism-test@alumeni.co.uk
 system.social.thumbnail=fbimg.jpg
 
 system.default.email.subject.directory=email/subject/
@@ -87,8 +84,6 @@ integration.google.geocoding.code.import.data=false
 integration.google.geocoding.api.uri=https://maps.googleapis.com/maps/api/geocode/
 integration.google.geocoding.api.day.batch.limit=250
 integration.google.geocoding.api.request.delay.ms=100
-integration.google.search.api.uri=https://www.googleapis.com/customsearch/v1
-integration.google.search.api.cse.key=014399221313847880480:klv9napshqc&q
 
 integration.yahoo.exchange.rate.api.uri=https://query.yahooapis.com/v1/public/yql
 integration.yahoo.exchange.rate.api.schema=store://datatables.org/alltableswithkeys
@@ -97,6 +92,7 @@ integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
 integration.amazon.on=false
 integration.amazon.bucket=prism-document-tst
 integration.amazon.production.bucket=prism-document
+integration.amazon.email.bounce.queue=
 
 auth.facebook.appSecret=b5c7321c5526298a5ba37db405b7d533
 auth.linkedin.appSecret=S9rG2e7FWFRY5YFh
