Changed the way of passing authToken (using cookies)

--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -17,7 +17,7 @@ context.environment=uat
 # -----------------------------------------------------------------------------
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
-email.source=prism-uat@alumeni.co.uk
+email.source=prism-uat-no-reply@alumeni.co.uk
 
 # -----------------------------------------------------------------------------
 # START-UP
