--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -17,7 +17,7 @@ context.environment=prod
 # -----------------------------------------------------------------------------
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
-email.source=prism@alumeni.co.uk
+email.source=prism-no-reply@alumeni.co.uk
 
 # -----------------------------------------------------------------------------
 # START-UP
