Minor email changes

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -17,7 +17,7 @@ context.environment=dev
 # -----------------------------------------------------------------------------
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
-email.source=prism@alumeni.co.uk
+email.source=prism-local-no-reply@local.alumeni.co.uk
 
 # -----------------------------------------------------------------------------
 # START-UP
