Fixed further issues, testing before deploy.

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -31,7 +31,7 @@ startup.display.initialize.drop=false
 # -----------------------------------------------------------------------------
 # MAINTENANCE
 # -----------------------------------------------------------------------------
-maintenance.run=false
+maintenance.run=true
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
