system starting up and running with refactored code.

--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -35,8 +35,8 @@ maintenance.run=false
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
 # -----------------------------------------------------------------------------
-import.institutionDomicile.location=xml/iso/isoCountryCode.xml
-import.countryCurrency.location=xml/iso/countryCurrency.csv
+import.institutionDomicile.location=xml/iso/institutionDomicile.xml
+import.institutionDomicile.location.schema=xsd/iso/institutionDomicile.xsd
 
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
