--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -36,8 +36,8 @@ maintenance.run=true
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
 # -----------------------------------------------------------------------------
-import.institutionDomicile.location=xml/iso/isoCountryCode.xml
-import.countryCurrency.location=xml/iso/countryCurrency.csv
+import.institutionDomicile.location=xml/iso/institutionDomicile.xml
+import.institutionDomicile.location.schema=xsd/iso/institutionDomicile.xsd
 
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
