--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -22,7 +22,7 @@ email.source=prism-local-no-reply@local.alumeni.co.uk
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.import.system.data=false
+startup.import.system.data=true
 
 startup.workflow.initialize=false
 startup.display.initialize=false
@@ -36,8 +36,8 @@ maintenance.run=true
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
 # -----------------------------------------------------------------------------
-import.institutionDomicile.location=xml/iso/isoCountryCode.xml
-import.countryCurrency.location=xml/iso/countryCurrency.csv
+import.institutionDomicile.location=xml/iso/institutionDomicile.xml
+import.institutionDomicile.location.schema=xsd/iso/institutionDomicile.xsd
 
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
