--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -39,8 +39,8 @@ maintenance.run=false
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
 # -----------------------------------------------------------------------------
-import.institutionDomicile.location=xml/iso/isoCountryCode.xml
-import.countryCurrency.location=xml/iso/countryCurrency.csv
+import.institutionDomicile.location=xml/iso/institutionDomicile.xml
+import.institutionDomicile.location.schema=xsd/iso/institutionDomicile.xsd
 
 # -----------------------------------------------------------------------------
 # CUSTOM FORMS
