Some translations problems fixed

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -26,12 +26,12 @@ startup.import.system.data=true
 
 startup.workflow.initialize=false
 startup.display.initialize=false
-startup.display.initialize.drop=false
+startup.display.initialize.drop=true
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
 # -----------------------------------------------------------------------------
-maintenance.run=false
+maintenance.run=true
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
